--- a/Communicator/Views/Base.lproj/Main.storyboard
+++ b/Communicator/Views/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="dark"/>
+    <device id="retina6_1" orientation="landscape" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -14,20 +14,21 @@
             <objects>
                 <viewController id="Dey-sI-hG8" userLabel="Authentication Failed View Controller" customClass="AuthenticationFailedViewController" customModule="Communicator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GS8-iu-PCS">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="8X6-y9-L98">
-                                <rect key="frame" x="47.5" y="404" width="319.5" height="78"/>
+                                <rect key="frame" x="320" y="159" width="256" height="96"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Default: Authentication failed. Please try again." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8M-Dt-S1N">
-                                        <rect key="frame" x="0.0" y="0.0" width="319.5" height="18"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Default: Authentication failed. Please try again." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" showsExpansionTextWhenTruncated="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8M-Dt-S1N">
+                                        <rect key="frame" x="0.0" y="0.0" width="256" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
+                                        <size key="shadowOffset" width="0.0" height="0.0"/>
                                     </label>
                                     <button toolTip="Press here for singing in" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h6i-VI-yLn">
-                                        <rect key="frame" x="0.0" y="48" width="319.5" height="30"/>
+                                        <rect key="frame" x="0.0" y="66" width="256" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="2rZ-Zk-NVJ"/>
                                         </constraints>
@@ -46,6 +47,9 @@
                                         </connections>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="300" id="Lf6-Jh-Aco"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jou-nY-AcC"/>
@@ -69,15 +73,15 @@
             <objects>
                 <viewController id="BYZ-38-t0r" userLabel="Authentication View Controller" customClass="AuthenticationViewController" customModule="Communicator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <activityIndicatorView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="y0S-cs-RT1">
-                                <rect key="frame" x="188.5" y="424.5" width="37" height="37"/>
+                                <rect key="frame" x="429.5" y="188.5" width="37" height="37"/>
                                 <color key="color" name="TextColor"/>
                             </activityIndicatorView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2zc-Yx-T2w" userLabel="Authentication Form">
-                                <rect key="frame" x="82" y="378" width="250" height="130"/>
+                                <rect key="frame" x="323" y="142" width="250" height="130"/>
                                 <subviews>
                                     <textField toolTip="Enter username" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="leading" contentVerticalAlignment="center" borderStyle="line" placeholder=" Username" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="SL9-FE-83z">
                                         <rect key="frame" x="0.0" y="0.0" width="250" height="30"/>
@@ -152,14 +156,14 @@
             <objects>
                 <viewController id="beg-Je-PiH" userLabel="Data View Controller" customClass="DataViewController" customModule="Communicator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fy0-sB-qqA">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="o8h-BQ-44B" userLabel="Main View">
-                                <rect key="frame" x="57" y="33" width="300" height="830"/>
+                                <rect key="frame" x="298" y="33" width="300" height="348"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" directionalLockEnabled="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCh-sW-o01" userLabel="Data">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="258"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="180"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <color key="tintColor" name="AccentColor"/>
                                         <constraints>
@@ -175,7 +179,7 @@ Vivamus facilisis massa sed lorem ultrices congue. Vestibulum sed nunc non lorem
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="d4W-8a-kiN" userLabel="Buttons View">
-                                        <rect key="frame" x="0.0" y="760" width="300" height="70"/>
+                                        <rect key="frame" x="0.0" y="278" width="300" height="70"/>
                                         <subviews>
                                             <button toolTip="Press here for singing in" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lbu-aJ-OLd">
                                                 <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
@@ -244,7 +248,7 @@ Vivamus facilisis massa sed lorem ultrices congue. Vestibulum sed nunc non lorem
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="D0e-qx-pDO"/>
+        <segue reference="j1O-PE-q3S"/>
     </inferredMetricsTieBreakers>
     <resources>
         <namedColor name="AccentColor">
